tests/NormalTests/paczka1/fuzzy1/15210985.err
Error in line 8: S218 S259 116,1
Error in line 15: LviZBYgO2e A803 61,1
Error in line 19: 88hIRjPn9U A803 98,3
Error in line 31: S6UGJ6dN A803 138,62
Error in line 34: LviZBYgO2e S218 48,3
